# EECE5550

./: README.md
HW1/: CMakeLists.txt  README.md
HW1/data/: CurveP_1s.txt  CurveP_30s.txt  SE3Traj_1s.txt  SE3Traj_30s.txt  carTrajectory_quaternion.txt  carTrajectory_so3.txt  carTrajectory_tum.txt
HW1/include/: visualize.h
HW1/scripts/: plot_car_trajectory.py  plot_se3.py
HW1/src/: basicSophus.cpp  q1.cpp  q3.cpp  q4.cpp  visualize.cpp
HW2/: README.md
HW2/ICP/: CMakeLists.txt
HW2/ICP/data/: comparison_kdtree.pcd  result.txt
HW2/ICP/scripts/: plot.py
HW2/ICP/src/: CMakeLists.txt  kdTree_svd_icp.cpp  svd_icp.cpp
HW2/PF/: CMakeLists.txt
HW2/PF/data/: noiseless_10s.txt  noiseless_20s.txt  prediction.txt  prediction_10s.txt  prediction_noUpdate.txt  prediction_updated.txt  updated.txt
HW2/PF/scripts/: plot.py  plot_car_trajectory.py  statistic.py
HW2/PF/src/: main.cpp  robot.cpp
HW3/: README.md
HW3/aprilTag/: CMakeLists.txt
HW3/aprilTag/src/: apriltag_pnp.cpp
HW3/calibration/: CMakeLists.txt
HW3/calibration/src/: main.cpp
HW3/vslam/: CMakeLists.txt
HW3/vslam/data/: cameraPose.txt  tagPose.txt
HW3/vslam/scripts/: plot.py
HW3/vslam/src/: vslam.cpp
HW4/astar/: CMakeLists.txt
HW4/astar/data/: map.txt  path.txt  plot.py
HW4/astar/include/: astar.h
HW4/astar/src/: astar.cpp  main.cpp  map.cpp  testMain.cpp  visualize.cpp
HW4/mdp/scripts/: mdp.py
HW4/pid/scripts/: p.py  pd.py  pid.py
HW4/prm/scripts/: prm.py
